# wsl2-bridge-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: bootstrap.sh  systemd-manage.sh
src/: main.rs
systemd/: gpg-agent-extra-relay.service  gpg-agent-relay.service  gpg-agent-ssh-relay.service  ssh-agent-relay.service
