[package]
name = "wsl2-gpg-agent-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
home = "0.5.11"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
windows-sys = "0.59.0"

[dependencies.windows]
version = "0.61.1"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
    "UI_Core",
]
