[package]
name = "wsl2-gpg-agent-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2" # optional, for file logging
windows-sys = { version = "0.61.0", features = [
    "Win32_Security",
    "Win32_System",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
] }
clap = { version = "4.5.32", features = ["derive"] }
home = "0.5.11"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
